# n5a

./: .gitignore  .travis.yml  LICENSE  README.md  setup.py
n5a/: __init__.py  cli.py  generate.py  n5atype.py  serialize.py
n5a/types/: n5atype.py
test/: test_definitions.py  test_generate.py  test_serialization.py  test_types.py
test/test_cpp/: CMakeLists.txt  simple_test.cpp
